# desktop_tray

./: package-lock.json  package.json  test-server.js
.github/workflows/: build.yml
plaid-server/src/: main.ts
plaid-server/src/plaid/: plaid.controller.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json  windows-resources.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  main.rs  upload.rs
src-tauri/src/orchestrator/: backend.rs  docker.rs  mod.rs  postgres.rs
src/components/: ActivationScreen.vue  BankDashboard.vue  ClientSelector.vue  FileSelector.vue  NetworkStatus.vue  UploadHistorySection.vue
