[package]
name = "fluxbooks-desktop-tray"
version = "0.1.0"
description = "FluxBooks Desktop Tray App"
authors = []
edition = "2021"

[lib]
name = "fluxbooks_desktop_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
